# curso-lse

./: .gitignore
workspace_lpc845/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
workspace_lpc845/.mcuxpressoide_packages_support/LPC845_support/: info.properties
workspace_lpc845/Clase_01/01_7Seg/: .cproject  CMakeLists.txt  CMakePresets.json  LPC845_Project LinkServer Debug.launch  LPC845_Project_Debug.ld  flags.cmake  mcux_include.json
workspace_lpc845/Clase_01/01_7Seg/Debug/: LPC845_Project.axf  LPC845_Project.map  LPC845_Project_Debug_library.ld  LPC845_Project_Debug_memory.ld  makefile
workspace_lpc845/Clase_01/01_7Seg/Debug/board/: board.d  clock_config.d  clock_config.su  pin_mux.d  pin_mux.su  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/component/uart/: fsl_adapter_miniusart.d  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/device/: subdir.mk  system_LPC845.d
workspace_lpc845/Clase_01/01_7Seg/Debug/drivers/: fsl_clock.d  fsl_common.d  fsl_common_arm.d  fsl_gpio.d  fsl_power.d  fsl_power.su  fsl_reset.d  fsl_swm.d  fsl_usart.d  fsl_usart.su  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/source/: LPC845_Project.d  LPC845_Project.su  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/startup/: subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/utilities/: fsl_assert.d  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/utilities/debug_console_lite/: fsl_debug_console.d  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/Debug/utilities/str/: fsl_str.d  subdir.mk
workspace_lpc845/Clase_01/01_7Seg/source/: LPC845_Project.c
workspace_lpc845/Clase_01/01_blinkynnn/: .cproject  .project  01_blinkynnn LinkServer Debug.launch  CMakeLists.txt  flags.cmake
workspace_lpc845/Clase_01/01_blinkynnn/Debug/: 01_blinkynnn.axf  01_blinkynnn.map  01_blinkynnn_Debug.ld  01_blinkynnn_Debug_library.ld  01_blinkynnn_Debug_memory.ld  makefile
workspace_lpc845/Clase_01/01_blinkynnn/Debug/board/: board.d  clock_config.d  clock_config.su  pin_mux.d  pin_mux.su  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/component/uart/: fsl_adapter_miniusart.d  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/device/: subdir.mk  system_LPC845.d
workspace_lpc845/Clase_01/01_blinkynnn/Debug/drivers/: fsl_clock.d  fsl_common.d  fsl_common_arm.d  fsl_gpio.d  fsl_power.d  fsl_power.su  fsl_reset.d  fsl_swm.d  fsl_usart.d  fsl_usart.su  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/source/: 01_blinkynnn.d  01_blinkynnn.su  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/startup/: subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/utilities/: fsl_assert.d  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/utilities/debug_console_lite/: fsl_debug_console.d  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/Debug/utilities/str/: fsl_str.d  subdir.mk
workspace_lpc845/Clase_01/01_blinkynnn/source/: 01_blinkynnn.c
workspace_lpc845/Clase_02/: __repo__  main.c
workspace_lpc845/Clase_02/armgcc/: config.cmake  mcux_include.json
workspace_lpc845/Clase_02/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  new_project.elf  output.map
workspace_lpc845/Clase_02/armgcc/debug/.cmake/api/v1/reply/: cache-v2-20093d37d1e43a5dcc0b.json  cmakeFiles-v1-a5be0e38bb31c71a0774.json  codemodel-v2-e8bb3eacacb3e8ce5fae.json  index-2025-06-03T12-26-51-0313.json  target-new_project.elf-debug-b9ea6e342212b800ca51.json
workspace_lpc845/Class_freertos/: __repo__
workspace_lpc845/Class_freertos/armgcc/: CMakeLists.txt  mcux_include.json
workspace_lpc845/Class_freertos/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  new_project.elf  output.map
workspace_lpc845/Class_freertos/armgcc/debug/.cmake/api/v1/reply/: cache-v2-cded665386a35a43f0de.json  cmakeFiles-v1-c9423927cb9fe87a9048.json  codemodel-v2-0f4a4a3684067992185b.json  directory-freertos-debug-4f6fc5b21269cb45bb2d.json  index-2025-06-17T12-56-23-0498.json  target-freertos-debug-6bd709c2c9075dafa799.json  target-new_project.elf-debug-fc3982f49578605fac04.json
workspace_lpc845/Class_freertos/armgcc/debug/freertos/: cmake_install.cmake
workspace_lpc845/clase04/: __repo__  main.c
workspace_lpc845/clase04/armgcc/: CMakeLists.txt  mcux_include.json
workspace_lpc845/clase_03/: __repo__  main.c
workspace_lpc845/clase_03/armgcc/: config.cmake  mcux_include.json
workspace_lpc845/clase_03/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  new_project.elf  output.map
workspace_lpc845/clase_03/armgcc/debug/.cmake/api/v1/reply/: cache-v2-7886d0d0edc9fb39954a.json  cmakeFiles-v1-fe1d2db1ecf26f79d42c.json  codemodel-v2-02ea47b7587ff62f7334.json  index-2025-06-03T14-26-24-0803.json  target-new_project.elf-debug-4c94f7a934c22fdaf10f.json  toolchains-v1-caeffc603aa5bf8005a7.json
workspace_lpc845/freertos/: CMakeLists.txt  mcux_include.json
